Use Java 21 preview features